--- a/packages/mailer/tests/assets/emails/users/confirm-account-with-footer.ejs
+++ b/packages/mailer/tests/assets/emails/users/confirm-account-with-footer.ejs
@@ -6,4 +6,4 @@ Please confirm your account by clicking on the link below:
 
 Regards,
 
-<%- await include('layouts/footer') %>
+<%- await include('../layouts/footer') %>
